--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <h1 class="text-uppercase">My name is Ayush Kumar</h1>
             <h5 class="text-uppercase">Full stack developer</h5>
             <div class="mt-5">
-              <a class="main-btn primary-btn" href="#">Hire Me</a>
-              <a class="main-btn secondary-btn ms-4" href="#">Get Cv</a>
+              <a class="main-btn primary-btn" target="_blank" href="mailto:ayushkumar982191@gmail.com">Hire Me</a>
+              <a class="main-btn secondary-btn ms-4" target="_blank"  href="pdf/Ayush_Resume.pdf">Get Cv</a>
             </div>
           </div>
           <div class="col-lg-5 order-lg-2 order-1">
@@ -107,18 +107,14 @@
           <div class="col-lg-5 mb-3 mb-4 mb-lg-0">
             <h3>Let's <br />Introduce about <br />myself</h3>
             <p>
-              Hi,my name is Ayush Kumar.I am graduating from Jain University
-              where I completed my bachelor in Technology.There I completed my
-              internships as a web developer.
-            </p>
+              Highly motivated Information Science and Engineering graduate from Jain University, specializing in Information Science and Engineering, with a keen interest in both front-end and back-end technologies. Eager to leverage my skills and knowledge to contribute meaningfully to the tech industry.            </p>
             <p>
-              I am interested in the role of web developer where I can show my
-              skills in web development.The web development languages in which I
-              am comforable are: HTML,CSS,JavaScript,Mongodb,Rest API's.
+              I am actively seeking opportunities as a web developer where I can utilize and showcase my skills in web development. I am proficient in the following web development languages and technologies: HTML, CSS, JavaScript, MongoDB, and REST APIs.
             </p>
             <a
-              href="pdf/AyushKumar-Resume.pdf"
+              href="pdf/Ayush_Resume.pdf"
               class="main-btn primary-btn mt-4"
+              target="_blank"
               >Download CV</a
             >
           </div>
@@ -221,7 +217,37 @@
     </div>
     </div>
   </section>
-   
+ 
+     <!-- sectinal part start here  -->
+     <section id="home" class="banner_wrapper mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 order-lg-1 order-2 banner_content  ml-2 mr-2">
+             <h4>Hikechat(Chat Application)</h4>
+             <ul>
+              <li>Developed real-time chat app with HTML, CSS, JS, React, MongoDB, Node.js, Express, and Socket.io.</li>
+              <li>Achieved 99.9% uptime deploying on hosting platform, ensuring continuous accessibility.</li>
+              <li>Reduced page load time by 30% through React.js component optimization.</li>
+              <li>Implemented Socket.io for instant messaging, achieving 100ms message delivery time.</li>
+              <li>Managed over 10,000 concurrent connections with MongoDB, storing 100,000+ messages daily.</li>
+              <li><a target="_blank" href="https://chat-app-pi-jade.vercel.app/">Live Url</a></li>
+             </ul>
+
+          </div>
+          <div class="col-lg-5 order-lg-2 order-1 ml-2 mr-2">
+            <h4>RnapDeal(Ecommerce Website)</h4>
+            <ul>
+              <li>Developed a responsive online e-commerce application using HTML, CSS, JavaScript, and React, resulting in a 30% increase in user engagement.</li>
+              <li>Designed dynamic product catalog with filtering, handling 100+ products, improving navigation by 50%.</li>
+              <li>Utilized React for efficient state management, cutting load times by 20%</li>
+              <li>Enhanced checkout process for seamless transactions, resulting in a 25% increase in conversion rates.</li>
+              <li><a href="https://ayushkumar982191-me-qkart-frontend-v2-4tqragway.vercel.app/">Ecommerce Link</a></li>
+            </ul>
+             
+          </div>
+        </div>
+      </div>
+    </section>
    
    <section class="container" id="contact">
     <div class="row">
@@ -235,7 +261,7 @@
 
       <div class="col-lg-6 col-md-10 formcontainer">
         <div class="">
-          <h2>Contact Us</h2>
+          <h2>Connect to Me</h2>
           <form action="">
             <input
               type="text"
